<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_">UI-Kit</string>
    <string name="toolbar_header_label">Chats</string>
    <string name="error_no_new_messages_label">No new messages</string>
    <string name="error_any_new_message_label">Any new messages will appear here</string>
    <string name="title_image">Photo</string>
    <string name="msg_typing">typing&#8230;</string>
    <string name="contacts_label">Contact</string>
    <string name="profile_label">Profile</string>
    <string name="logout_label">Logout</string>
    <string name="report_log_label">Report Log</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="ok_label">OK</string>
    <string name="not_now_label">Not Now</string>
    <string name="logout_message_label">Are you sure you want to logout from the app?</string>
    <string name="error_no_contacts_label">No contacts found</string>
    <string name="error_any_contacts_label">Any new contacts will appear here</string>
    <string name="register_number_label">Please choose your country code and enter your mobile number to get the verification code.</string>
    <string name="enter_mobile_number_label">Enter Mobile Number</string>
    <string name="get_otp_label">Get OTP</string>
    <string name="continue_label">Continue</string>
    <string name="verify_otp_label">Verify OTP</string>
    <string name="resend_otp_label">Resend OTP</string>
    <string name="change_number_label">Change Number</string>
    <string name="register_label">Register</string>
    <string name="register_your_number_label">Register Your Number</string>
    <string name="verify_label">Verify</string>
    <string name="please_wait_label">Please wait&#8230;</string>
    <string name="enter_otp_label">Enter the OTP</string>
    <string name="enter_valid_otp_label">OTP mismatched, please enter the valid OTP</string>
    <string name="error_enter_mobile_number">Please enter your mobile number</string>
    <string name="otp_info_label">We have sent you the SMS. To complete the registration enter the 6 digit verification code below</string>
    <string name="error_mobile_number_short">Your mobile number is too short</string>
    <string name="error_mobile_number_length">Your mobile number contains more than 16 digits</string>
    <string name="valid_mobile_number">Please enter a valid mobile number</string>
    <string name="error_check_internet">Please check your internet connection</string>
    <string name="file_format_not_supported">The file format is not supported</string>
    <string name="error_invalid_otp">Invalid OTP</string>
    <string name="error_otp_many_attempts">Too many attempts, Please try again later</string>
    <string name="error_otp_authorization">Authorization failure! Please try again.</string>
    <string name="firebase_auth_timeout_duration">30</string>
    <string name="otp_instant_verification_success_message">Authentication success</string>
    <string name="profile_update_label">Profile updated successfully</string>
    <string name="resend_otp_message">Resending OTP please wait&#8230;</string>
    <string name="already_logged">You have logged-in another device. Do you want to continue here?</string>
    <string name="getting_data_label">Getting Data&#8230;</string>
    <string name="account_blocked_label">Your account has been blocked</string>
    <string name="verification_code_label">Verification code can\'t be read automatically</string>
    <string name="options_label">Options</string>
    <string name="take_photo_label">Take Photo</string>
    <string name="choose_gallery_label">Choose from Gallery</string>
    <string name="remove_photo_label">Remove Photo</string>
    <string name="select_country_label">Select Country</string>
    <string name="logging_out_label">Logging out&#8230;</string>
    <string name="no_countries_label">No countries found</string>
    <string name="toolbar_search_label">Search&#8230;</string>
    <string name="chats_label">Chats</string>
    <string name="calls_label">Calls</string>
    <string name="terms_and_condition_description_label">By clicking continue you agree to MirrorFly</string>
    <string name="terms_and_condition_label">Terms and Conditions</string>
    <string name="privacy_policy_label">Privacy Policy.</string>
    <string name="terms_and_privacy_policy_label">%s, %s</string>
    <string name="terms_and_conditions_link">https://www.mirrorfly.com/terms-and-conditions.php</string>
    <string name="privacy_policy_link">https://www.mirrorfly.com/privacy-policy.php</string>
    <string name="storage_permission_label">Storage permissions are needed for this action</string>
    <string name="calling_permission_label">Calling permissions are needed for this action</string>
    <string name="location_permission_label">Location permissions are needed for sharing your location</string>
    <string name="read_contact_permission_label">Read Contacts permissions is needed for syncing contacts</string>
    <string name="camera_permission_label">Camera permissions is needed for this action</string>
    <string name="audio_record_permission_label">Storage and audio record permissions are needed for recording features</string>
    <string name="storage_camera_permission_label">Storage and camera permissions are needed for this action</string>
    <string name="record_permission_label">Record audio and PhoneState record permissions are needed for Audio Calling features</string>
    <string name="video_record_permission_label">Camera, Record audio and PhoneState permissions are needed for Video Calling features</string>
    <string name="permission_camera_rationale">Camera permission is needed for this action</string>
    <string name="scan_code">Scan code</string>
    <string name="title_web_settings">Web Settings</string>
    <string name="text_visit_chat_web">Visit</string>
    <string name="action_logout_all_computers">Logout from all computers</string>
    <string name="text_logged_in_computers">Logged In Computers</string>
    <string name="scanner_result">Scanner Result</string>
    <string name="alert_dialouge_logout">Are you want to logout?</string>
    <string name="new_group_label">New Group</string>
    <string name="settings_label">Settings</string>
    <string name="search_label">Search</string>
    <string name="invite_contact_label">Invite Contacts</string>
    <string name="invite">Invite</string>
    <string name="title_invite_friend">Invite Friend</string>
    <string name="action_web_settings">Web</string>
    <string name="acknowledge_content_description">Acknowledged</string>
    <string name="delivered_content_description">Delivered</string>
    <string name="seen_content_description">Seen</string>
    <string name="NotAcknowledge_content_description">Not Acknowledged</string>
    <string name="image_content_description">Image</string>
    <string name="email_label">Email</string>
    <string name="email_content_description">Email</string>
    <string name="title_user_name">Username</string>
    <string name="title_user_mail">User Mail</string>
    <string name="mobile_number_label">Mobile Number</string>
    <string name="mobile_number_description">Mobile Number</string>
    <string name="status_label">Status</string>
    <string name="status_description">Status</string>
    <string name="save_button">Save</string>
    <string name="enter_name_label">Enter your username</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="error_enter_user_name">Please enter your username</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_username_too_short">Username is too short</string>
    <string name="error_busy_status_empty">Busy status cannot be empty</string>
    <string name="error_status_empty">Status cannot be empty</string>
    <string name="profile_photo_label">Profile Photo</string>
    <string name="profile_photos_label">Profile Photos</string>
    <string name="update_continue_label">Update &amp; Continue</string>
    <string name="sent_media_label">Sent Media</string>
    <string name="edit_label">Edit</string>
    <string name="share_label">Share</string>
    <string name="default_busy_status">I am busy</string>
    <string name="error_occurred_label">Error Occurred. Please try again.</string>
    <string name="msg_profile_updated">Profile updated successfully</string>
    <string name="msg_profile_image_removed">Profile picture removed successfully</string>
    <string name="default_status">I am in Mirror Fly</string>
    <string name="msg_status_delete">Do you want to delete the status?</string>
    <string name="title_current_status">Your current status</string>
    <string name="message_select_status">Select your new status</string>
    <string name="delete_status">Delete</string>
    <string name="msg_add_new_status">Add New Status</string>
    <string name="msg_enter_mail">Email should not be empty</string>
    <string name="msg_enter_valid_mail">Please enter a valid Mail</string>
    <string name="msg_no_update">It seems there is no change in your profile</string>
    <string name="archived_label">Archived</string>
    <string name="single_chat_receiver_recall">This message was deleted&#160;&#160;&#160;&#160;</string>
    <string name="msg_no_chats">No Chats Found</string>
    <string name="msg_no_results">No results found</string>
    <string name="msg_no_contacts">No Contacts found</string>
    <string name="msg_timed_out_sms">Timed out waiting for SMS</string>
    <string name="msg_otp_validated">OTP validated successfully</string>
    <string name="max_profile_name_chars">Maximum of 30 Characters</string>
    <string name="msg_status_updated">Status updated successfully</string>
    <string name="msg_profile_pic_update_failure">Profile image upload failed</string>
    <string name="msg_are_you_sure_you_want_to_remove_photo">Are you sure you want to remove the photo?</string>
    <string name="msg_are_you_sure_exit">Are you sure you want to leave from group?\u0020</string>
    <string name="action_exit">Exit</string>
    <string name="msg_are_you_sure_delete">Are you sure you want to delete this group?\u0020</string>
    <string name="msg_are_you_sure_delete_broadcast">Are you sure you want to delete this broadcast?\u0020</string>
    <string name="action_remove">Remove</string>
    <string-array name="default_status_values">
        <item>Available</item>
        <item>Sleeping&#8230;</item>
        <item>Urgent calls only</item>
        <item>At the movies</item>
        <item>I am in Mirror Fly</item>
    </string-array>
    <string-array name="default_busy_status_values">
        <item>Driving car. Text you later</item>
        <item>Please call me if anything important</item>
        <item>Sleeping</item>
        <item>In meeting</item>
    </string-array>
    <string name="label_camera">Camera</string>
    <string name="label_video">Video</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_document">Document</string>
    <string name="label_audio">Audio</string>
    <string name="label_location">Location</string>
    <string name="label_contact">Contact</string>
    <string name="msg_media_does_not_exists">Sorry. Media file isn\'t available in your internal storage</string>
    <string name="file_viewing_message">You may not have a proper app viewing this content</string>
    <string name="error_google_map_not_installed">Google map not available</string>
    <string name="content_uploading">Uploading</string>
    <string name="content_sent_video">Sent_video</string>
    <string name="error_retry">Retry</string>
    <string name="font_roboto_medium">fonts/roboto_medium.ttf</string>
    <string name="font_roboto_regular">fonts/roboto_regular.ttf</string>
</resources>