<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:emojicon="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    android:orientation="vertical"
    tools:context=".activities.CommonEditorActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/common_toolbar" />

    <LinearLayout
        android:id="@+id/view_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:textColor="@android:color/black"
            emojicon:emojiconSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/status_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:padding="@dimen/padding_6"
            android:textColor="?attr/profile_text_color"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:id="@+id/image_smiley"
            android:layout_width="@dimen/margin_25"
            android:layout_height="@dimen/margin_25"
            android:layout_marginStart="@dimen/margin_10"
            android:contentDescription="@string/image_content_description"
            android:scaleType="fitXY"
            android:src="@drawable/select_status_smiley"
            app:tint="?attr/profile_text_color" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_below="@+id/view_editor"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/view_editor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_above="@+id/view_footer"
        android:background="?attr/light_gray_color"
        app:layout_constraintBottom_toTopOf="@+id/view_footer" />

    <LinearLayout
        android:id="@+id/view_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.contusfly.views.CustomTextView
            android:id="@+id/text_cancel"
            android:layout_width="@dimen/margin_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_settings_opt"
            android:gravity="center"
            android:text="@string/action_cancel"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            app:fontFamily="@font/sf_ui_display_semi_bold" />

        <View
            android:layout_width="@dimen/margin_1"
            android:layout_height="match_parent"
            android:background="?attr/light_gray_color" />

        <com.contusfly.views.CustomTextView
            android:id="@+id/text_ok"
            android:layout_width="@dimen/margin_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_settings_opt"
            android:gravity="center"
            android:text="@string/action_ok"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_16"
            app:fontFamily="@font/sf_ui_display_semi_bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/emojicons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_250"
        android:visibility="gone"
        android:layout_alignParentBottom="true" />

</RelativeLayout>