<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ChatView"
    tools:targetApi="LOLLIPOP">

    <include layout="@layout/view_chat_space" />

    <RelativeLayout
        android:id="@+id/row_chat_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_8"
        android:paddingTop="@dimen/margin_2"
        android:paddingEnd="@dimen/padding_18"
        android:paddingBottom="@dimen/margin_2">

        <RelativeLayout
            android:id="@+id/rl_header_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            <include
                android:id="@+id/header_starred_message_receiver"
                layout="@layout/row_starred_message_header_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="start|center_vertical"
                android:layout_centerVertical="true"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_chat_date"
                style="@style/StarredMessageDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:maxWidth="250dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/view_chat_send_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_chat_shape_sender"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/rl_header_sender"
            tools:layout_height="@dimen/margin_200"
            tools:layout_width="@dimen/margin_250">

            <include
                android:id="@+id/view_text_sent_reply"
                layout="@layout/list_chat_reply_sent_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_3" />

            <Space
                android:id="@+id/space_sent_reply"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/view_chat_send_img_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_3">

                <com.contusfly.views.RoundRectCornerImageView
                    android:id="@+id/image_send_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_sent_video"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/image_sent_chat_type"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_11"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/margin_7"
                    android:layout_marginTop="@dimen/padding_6"
                    android:layout_marginEnd="@dimen/margin_4"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_sent_video"
                    app:srcCompat="@drawable/ic_type_video_receiver" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_video_send_duration"
                    style="@style/ChatTimeTextView"
                    android:layout_toEndOf="@+id/image_sent_chat_type"
                    android:layout_alignBottom="@+id/image_sent_chat_type"
                    android:layout_alignTop="@+id/image_sent_chat_type"
                    android:minEms="2"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_9"
                    android:includeFontPadding="false"
                    android:textColor="@color/color_white"
                    app:font_name="@string/font_roboto_medium"
                    android:fontFamily="@font/sf_ui_display_regular" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="bottom|end">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ic_balloon"
                        android:layout_width="@dimen/margin_120"
                        android:layout_height="@dimen/margin_75"
                        android:contentDescription="@null"
                        android:scaleType="fitEnd"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        app:srcCompat="@drawable/ic_baloon" />

                    <ImageView
                        android:id="@+id/ic_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginEnd="0dp"
                        android:paddingBottom="@dimen/margin_5"
                        android:layout_toStartOf="@+id/image_message_status"
                        android:layout_alignTop="@+id/image_message_status"
                        android:layout_alignBottom="@+id/image_message_status"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_star" />

                    <ImageView
                        android:id="@+id/image_message_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:paddingBottom="@dimen/margin_5"
                        android:layout_toStartOf="@+id/text_message_sent_time"
                        android:layout_alignTop="@+id/text_message_sent_time"
                        android:layout_alignBottom="@+id/text_message_sent_time"
                        android:contentDescription="@string/acknowledge_content_description"
                        android:src="@drawable/ic_message_acknowledged" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_message_sent_time"
                        style="@style/ChatTimeTextView"
                        tools:text="10:10 AM"
                        android:includeFontPadding="false"
                        android:paddingBottom="@dimen/margin_5"
                        android:paddingEnd="@dimen/margin_7"
                        android:paddingStart="@dimen/margin_0"
                        android:textColor="@color/color_white"
                        app:font_name="@string/font_roboto_regular"
                        android:layout_gravity="end|bottom|center_vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/sf_ui_display_regular"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/view_sent_carbon_download"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_download_shadow"
                    android:gravity="center"
                    android:visibility="gone">

                    <include layout="@layout/view_download" />

                </LinearLayout>

                <com.contusfly.views.RoundedCornerRelativeLayout
                    android:id="@+id/view_send_upload_progress"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_download_shadow"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img_upload_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/progress_send_image_rotate"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/content_uploading"
                        app:tint="@color/colorPrimary"
                        android:visibility="gone"
                        android:padding="@dimen/margin_9"
                        app:srcCompat="@drawable/ic_media_cancel" />

                    <ProgressBar
                        android:id="@+id/progress_send_image_rotate"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_above="@+id/progress_send_image"
                        android:layout_alignParentBottom="true"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/color_white"
                        android:scaleY="2"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progress_send_image"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_alignParentBottom="true"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/horizontal_receiver_progress_bar"
                        android:scrollbarSize="2dp"
                        android:visibility="gone" />

                </com.contusfly.views.RoundedCornerRelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_retry"
                    style="@style/RetryViewStyle"
                    android:drawableStart="@drawable/ic_upload_media"
                    android:text="@string/error_retry"
                    android:visibility="gone"
                    app:font_name="@string/font_roboto_regular" />

                <ImageView
                    android:id="@+id/image_send_play"
                    android:layout_width="@dimen/margin_55"
                    android:layout_height="@dimen/margin_55"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_chat_play_video" />

            </RelativeLayout>

            <include
                android:id="@+id/view_sent_image_caption"
                layout="@layout/row_sent_image_caption_text"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_divider"
        style="@style/divider_starred_msg"
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

</LinearLayout>